--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <log4j.version>2.5</log4j.version>
         <slf4j.version>1.7.19</slf4j.version>
+        <start-class>andrii.config.SpringBootWebApplication</start-class>
     </properties>
 
     <parent>
@@ -28,13 +29,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <!-- marked the embedded servlet container as provided -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId>
-            <scope>provided</scope>
         </dependency>
 
         <!-- Spring Security -->
